# easy_rand

./: Cargo.toml  README.md
src/: lib.rs
